# waraka

./: .env.example  .gitignore  CLAUDE.md  README.md  WARAKA_CONTEXT.md  WARAKA_SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: str_agent.py
api/: main.py
db/: init.sql  session.py
graph/: str_graph.py
hf_spaces/: README.md  app.py  requirements.txt
hf_spaces/.streamlit/: config.toml
hf_spaces/agents/: str_agent.py
hf_spaces/graph/: str_graph.py
hf_spaces/models/: schemas.py
hf_spaces/tools/: goaml_tool.py  ner_tool.py
models/: schemas.py
tests/: conftest.py  test_goaml_tool.py  test_ner_tool.py  test_sanctions_tool.py  test_str_agent.py
tools/: ner_tool.py  sanctions_tool.py
ui/: app.py
